src/components/Text/Annotated/annotated.css
.text-button,
.text-button:active,
.text-button:focus {
  border: none;
  outline: none;
  background: none;
}

@layer components {
  /* nested annotations markup */
  /* See project specific stylesheets for project specific annotation styling */

  .segmented-text {
    display: block;
  }

  .fullNestedAnnotation {
    @apply leading-[4rem];
  }

  .annotationMarker {
    @apply relative pl-4 before:absolute before:inline-block before:-translate-x-4 before:translate-y-1;
  }

  /* start marker icons */
  .start-annotation,
  .annotationMarker {
    @apply relative before:absolute before:inline-block;
  }

  .depth-1.start-annotation {
    @apply inline-block before:relative;
  }

  .annotated-per.start-annotation,
  .annotated-per.annotationMarker {
    @apply before:content-[url('/src/assets/icon-annotation-person.svg')];
    white-space: nowrap;
  }

  /* show levels */
  .fullNestedAnnotation .nested-annotation {
    @apply relative;
  }

  /* layer 1 */
  .fullNestedAnnotation .depth-1 {
    @apply inline border-b-0 border-t-0;
  }
  .fullNestedAnnotation .depth-1.annotated-per {
    @apply bg-annotation-per500/10;
  }

  /* layer 2 */
  .fullNestedAnnotation .depth-2 {
    @apply inline -translate-x-9 border-b-0 border-t-4 bg-none;
  }
  .fullNestedAnnotation .depth-2.annotated-per {
    @apply border-t-annotation-per500 bg-none;
  }

  .fullNestedAnnotation .depth-2.start-annotation {
    @apply before:-top-6 before:-translate-y-6;
  }

  /* layer 3 */
  .fullNestedAnnotation .depth-3 {
    @apply inline border-b-4 border-t-0 bg-none;
  }
  .fullNestedAnnotation .depth-3.annotated-per {
    @apply border-b-annotation-per500 bg-none;
  }

  .fullNestedAnnotation .depth-3.start-annotation {
    @apply before:-top-5 before:translate-y-7;
  }

  /* layer 4 */
  .fullNestedAnnotation .depth-4 {
    @apply inline border-b-0 border-t-4 bg-none pt-1;
  }
  .fullNestedAnnotation .depth-4.annotated-per {
    @apply border-t-annotation-per500 bg-none;
  }

  .fullNestedAnnotation .depth-4.start-annotation {
    @apply before:-top-6 before:-translate-y-6;
  }

  /* layer 5 */
  .fullNestedAnnotation .depth-5 {
    @apply inline border-b-4 border-t-0 bg-none pb-1;
  }
  .fullNestedAnnotation .depth-5.annotated-per {
    @apply border-b-annotation-per500 bg-none;
  }

  .fullNestedAnnotation .depth-5.start-annotation {
    @apply before:-top-5 before:translate-y-10;
  }

  /* annotations inline */
  .closedNestedAnnotation span {
    @apply inline border-b-0 border-t-0;
  }
  .closedNestedAnnotation .depth-2 {
    @apply border-b border-dashed border-neutral-600;
  }
  .closedNestedAnnotation .nested-annotation {
    @apply inline;
  }
  .closedNestedAnnotation .annotated-per {
    @apply bg-annotation-per100 hover:bg-annotation-per500/30;
  }

  .depth-1.start-annotation {
    @apply rounded-l;
  }
  /*Fix: apply rounded borders to nested-annotations starting with a marker: */
  .insert-marker + .nested-annotation {
    @apply rounded-l;
  }

  .depth-1.end-annotation {
    @apply rounded-r;
  }

  .closedNestedAnnotation {
    @apply relative shadow-none
    transition before:absolute before:-top-7 before:inline-block before:rounded-t before:bg-neutral-700 before:font-sans
    before:text-sm before:text-white hover:shadow hover:before:w-[160px] hover:before:px-2 hover:before:py-1 hover:before:content-["Click_for_detailed_view"];
  }
  .closedNestedAnnotation.nl {
    @apply hover:before:content-["Meer_info"];
  }
  .closedNestedAnnotation[role="link"] {
    @apply hover:before:content-["Click_to_open_link"];

    &.nl {
      @apply hover:before:content-["Open_link"];
    }
  }

  /* remove nested start icon */
  .closedNestedAnnotation .depth-2.start-annotation {
    @apply before:content-[url('')];
  }
  .closedNestedAnnotation .depth-3.start-annotation {
    @apply before:content-[url('')];
  }
  .closedNestedAnnotation .depth-4.start-annotation {
    @apply before:content-[url('')];
  }
  .closedNestedAnnotation .depth-5.start-annotation {
    @apply before:content-[url('')];
  }

  /* Marker annotations */
  .marker {
    height: 24px;
    width: 24px;
    background-color: white;
    border: 1px solid #333;
    border-radius: 50%;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    font-family: sans-serif;
    font-size: 11px;
    margin-left: 3px;
    margin-right: 3px;
    transform: translate(0px, -5px);
  }

  .inserted-text {
    font-size: 0.9em;
    color: #aaa;
  }
}

@layer utilities {
  .bigLine {
    line-height: 3rem;
  }
}

/**
 * Modal
 * source: https://react-spectrum.adobe.com/react-aria/Modal.html
 */
.react-aria-ModalOverlay {
  padding-top: 1em;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100%;
  background: rgba(0 0 0 / 0.5);
  display: flex;
  justify-content: center;
  z-index: 100;

  &[data-entering] {
    animation: modal-fade 200ms;
  }

  &[data-exiting] {
    animation: modal-fade 150ms reverse ease-in;
  }
}

.react-aria-Modal {
  height: fit-content;

  box-shadow: 0 8px 20px rgba(0 0 0 / 0.1);

  max-width: 300px;

  &[data-entering] {
    animation: modal-zoom 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
  }

  .react-aria-TextField {
    margin-bottom: 8px;
  }
}

.scrollable-modal-content {
  overflow: scroll;
  max-height: 100vh;
}

@keyframes modal-fade {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes modal-zoom {
  from {
    transform: scale(0.8);
  }

  to {
    transform: scale(1);
  }
}

